--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,78 +1,38 @@
-#what .items {
-  display: block;
-  padding: 1rem;
-}
-
-/* Align icon left */
-#what .items .item {
-  display: flex;
-  text-align: left;
-}
-
-/* Position icon */
-#what .items .item i {
-  margin-right: 1.3rem;
-  align-self: center;
-  margin-bottom: 0;
-}
-
-/* Smartphones */
-@media(max-width: 500px) {
-  #navbar {
-    flex-direction: column;
-    align-items: center;
+@media (max-width: 768px) {
+  .site-nav {
+    grid-template-columns: 1fr;
+    justify-items: start;
   }
 
-  #navbar .logo {
-    margin-bottom: 0.5rem;
-    text-align: center;
+  .nav-left,
+  .nav-right {
+    width: 100%;
   }
 
-  #navbar ul {
-    padding: 0.5rem;
+  .project {
+    grid-template-columns: 1fr;
+    gap: 1.25rem;
   }
 
-  #showcase .showcase-content {
-    top: 110px;
+  .project-side {
+    justify-self: start;
+    max-width: 100%;
   }
 
-  #who {
-    display: block;
+  .about-hero {
+    min-height: auto;
   }
 
-  #who .squid-img {
-    display: none;
+  .about-hero-inner {
+    grid-template-columns: 1fr;
+    gap: 1rem;
   }
 
-  #clients .items img {
-    width: 80%;
+  .about-hero-media {
+    padding-right: 1rem;
   }
 
-  #clients .items div:last-child {
-    display: none;
-  }
-
-  #contact {
-    flex-direction: column;
-  }
-
-  #contact .map {
-    border-top: 4px solid #333;
-    min-height: 200px;
-  }
-}
-
-@media(max-height: 568px) {
-  #showcase .showcase-content {
-    margin-top: -2rem;
-    top: 140px;
-  }
-
-  .l-heading {
-    font-size: 3rem;
-  }
-
-  .lead {
-    font-size: 1rem;
+  .about-hero-media img {
+    height: min(60vh, 520px);
   }
 }
